--- a/chichi/get_chichi_images.ipynb
+++ b/chichi/get_chichi_images.ipynb
@@ -27,14 +27,15 @@
             "outputs": [],
             "source": [
                 "! git clone https://github.com/ronghuaxueleng/get_v2.git\n",
-                "! cd get_v2\n",
+                "%cd get_v2 \n",
                 "! pip install -r requirements.txt\n",
-                "! cd chichi\n",
+                "%cd chichi\n",
                 "! python get_root_urls.py\n",
                 "\n",
                 "from google.colab import drive\n",
                 "drive.mount('/content/drive')\n",
-                "! cp -r images /content/drive/MyDrive/"
+                "! zip chichi_images.zip images\n",
+                "! cp chichi_images.zip /content/drive/MyDrive/"
             ]
         }
     ],
