--- a/chichi/get_chichi_images.ipynb
+++ b/chichi/get_chichi_images.ipynb
@@ -34,7 +34,7 @@
                 "\n",
                 "from google.colab import drive\n",
                 "drive.mount('/content/drive')\n",
-                "! zip chichi_images.zip images\n",
+                "! zip -r chichi_images.zip images\n",
                 "! cp chichi_images.zip /content/drive/MyDrive/"
             ]
         }
